# object_detection_ign

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  environment.yml  main.py  pyproject.toml  test.sh
.github/workflows/: build.yaml  push.yaml
config/: api_config.toml
data/: correspondance_table.csv
notebooks/: Satellite_VEDAI_+_RetinaNet.ipynb  api_endpoints.ipynb  data_pipeline.ipynb  model_development.ipynb  model_development_onnx.ipynb  model_development_pytorch.ipynb  model_development_tensorflow.ipynb  model_development_tensorflow_BAK.ipynb  poc.ipynb
object_detection_ign/: api.py  inference_helpers.py  satellite_view.py  utils.py
object_detection_ign/api/: api_configuration.py  data_objects.py  routes.py
object_detection_ign/detector/: inference_helpers.py
object_detection_ign/wmts/: satellite_view.py  utils.py
tests/: conftest.py  test_api.py  test_detector.py  test_wmts.py
